ingress/ingress-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: codeurjc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  rules:
   - host: www.mastercloudapps.com
     http:
      paths:
      - path: /anuncios/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp
            port:
              number: 8080
      - path: /gatos/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webgatos-service
            port:
              number: 5000
