ingress/ingress-minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codeurjc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: www.sampledomain.com
    http:
      paths:
      - path: /anuncios/
        backend:
          serviceName: webapp
          servicePort: 8080
      - path: /gatos/
        backend:
          serviceName: webgatos-service
          servicePort: 5000
