ingress/ingress-old.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress  
metadata:  
  name: codeurjc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  rules:
  - host: www.mastercloudapps.com
    http:
      paths:
      - path: /anuncios(/|$)(.*)
        backend:
          serviceName: webapp
          servicePort: 8080
      - path: /gatos(/|$)(.*)
        backend:
          serviceName: webgatos-service
          servicePort: 5000
